fix: adding right-aligned fix to contacts table

--- a/src/Components/MaintenancePanel/JobsTable/JobsTable.css
+++ b/src/Components/MaintenancePanel/JobsTable/JobsTable.css
@@ -2,8 +2,10 @@
   width: 23%;
 }
 
-.table-wrapper rux-table-header-cell.jobs-header-cell.right-align
-.table-wrapper rux-table-cell.jobs-cell.right-align {
+.table-wrapper
+  rux-table-header-cell.jobs-header-cell.right-align
+  .table-wrapper
+  rux-table-cell.jobs-cell.right-align {
   text-align: right;
 }
 
